Renaming an animated bone "breaks" its animation, until you save and open again. #60686

Closed
opened 2019-01-20 22:12:02 +01:00 by msalv · 5 comments

Blender Version
Broken: blender-2.80.0-git.b0dee09a6d55-windows64

Exact steps for others to reproduce the error
If after animating a bone, you rename it, when you play the animation again it doesn't move. You have to save and open the file again, or change the name of the bone to the previous one.

Open a new file, create a bone, animate it with two keyframes, and play the animation. Change the name of the bone, and play the animation again. It won't move now. Save, reopen, and it will move.

I don't include a blend file because saving fixes this

**Blender Version** Broken: blender-2.80.0-git.b0dee09a6d55-windows64 **Exact steps for others to reproduce the error** If after animating a bone, you rename it, when you play the animation again it doesn't move. You have to save and open the file again, or change the name of the bone to the previous one. Open a new file, create a bone, animate it with two keyframes, and play the animation. Change the name of the bone, and play the animation again. It won't move now. Save, reopen, and it will move. **I don't include a blend file because saving fixes this**
Author

Added subscriber: @moisessalvador

Added subscriber: @moisessalvador

Added subscribers: @Sergey, @WilliamReynish

Added subscribers: @Sergey, @WilliamReynish
Sergey Sharybin was assigned by William Reynish 2019-01-20 22:45:47 +01:00

Since you don't want to make an example blend file, I've made one for you.

To reproduce the bug, open the blend file below, rename the bone and press play. The bone will stop moving.

bone_rename_bug.blend

@Sergey: I assume this is depsgraph-related, so assigned to you.

Since you don't want to make an example blend file, I've made one for you. To reproduce the bug, open the blend file below, rename the bone and press play. The bone will stop moving. [bone_rename_bug.blend](https://archive.blender.org/developer/F6349679/bone_rename_bug.blend) @Sergey: I assume this is depsgraph-related, so assigned to you.

This issue was referenced by 414ebc68c2

This issue was referenced by 414ebc68c2cccabc20eb9b966c8235d222874d56

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#60686
No description provided.